canonical_kubernetes/kubernetes-gateway-api/10_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: schlaepfer
  namespace: common
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
spec:
  gatewayClassName: ck-gateway
  listeners:
    # HTTP Listener for schlaepfer.com
    - name: http-schlaepfer
      port: 80
      protocol: HTTP
      hostname: "*.apps.schlaepfer.com"
      allowedRoutes:
        namespaces:
          from: All

    # HTTPS Listener for schlaepfer.com
    - name: https-schlaepfer
      port: 443
      protocol: HTTPS
      hostname: "*.apps.schlaepfer.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-apps-schlaepfer-com
      allowedRoutes:
        namespaces:
          from: All
